--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall")
 
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
@@ -23,7 +22,7 @@ set(HEADERS
     )
 
 set(DISTFILES
-    qml.qrc
+    qml/qml.qrc
     .gitignore
     )
 
